[package]
name = "elementor-style-renderer-rs"
version = "0.1.0"
edition = "2024"
description = "Converts Elementor atomic widget PropValue trees into CSS strings — Rust port of the PHP styles-renderer / props-resolver modules"
license = "MIT"
repository = "https://github.com/bhubbard/elementor-style-renderer-rs"
homepage = "https://github.com/bhubbard/elementor-style-renderer-rs"
documentation = "https://docs.rs/elementor-style-renderer-rs"
keywords = ["elementor", "wordpress", "css", "atomic-widgets"]
categories = ["text-processing", "encoding"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
